<resources>
    <string name="app_name">Simple Unit Converter</string>
    <string name="lengthText">Length</string>


    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="darkTheme">Night Theme</string>
    <string name="changeDarkTheme">Switch to dark mode</string>
    <string name="shareContentMsg">Share result with...</string>
    <string name="scientificNotationTitle">Scientific notation</string>
    <string name="copiedMsg">Copied</string>
    <string name="convertFrom">%s %s\(\s\)\</string>
    <string name="convertTo">%s %s\(\s\)\ \n%s\(\E\)\ </string>
    <string name="clearAll">Delete All</string>
    <string name="shareTitle">Share</string>
    <string name="copyTitle">Copy</string>
    <string name="kilometer">Kilometer</string>
    <string name="meter">Meter</string>
    <string name="centimeter">Centimeter</string>
    <string name="millimeter">Millimeter</string>
    <string name="nanometer">Nanometer</string>
    <string name="decimeter">Decimeter</string>
    <string name="league">League</string>
    <string name="nauticalMile">Nautical Mile</string>
    <string name="mile">Mile</string>
    <string name="yard">Yard</string>
    <string name="foot">Foot</string>
    <string name="inch">Inch</string>
    <string name="lightSpeed">Speed light</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="millisecond">Millisecond</string>
    <string name="ton">Ton</string>
    <string name="kilogram">Kilogram</string>
    <string name="gram">Gram</string>
    <string name="milligram">Milligram</string>
    <string name="microgram">Micrograms</string>
    <string name="ounce">Ounce</string>
    <string name="pound">Pound</string>
    <string name="stone">stone</string>
    <string name="atWeigth">At Measure</string>
    <string name="shortHundredweight">Short Hundred weight</string>
    <string name="shortQuarter">Short quarter</string>
    <string name="shortTon">Short ton</string>
    <string name="coulomb">Coulomb</string>
    <string name="abccoulomb">Abcoulomb</string>
    <string name="ampereHour">Ampere/hour</string>
    <string name="faraday">Faraday</string>
    <string name="statCoulomb">Statcoulomb</string>
    <string name="milliFaraday">MilliFaraday</string>
    <string name="microFaraday">MicroFaraday</string>
    <string name="picoFaraday">PicoFaraday</string>
    <string name="meterForSecond">Meters/second</string>
    <string name="footPerMinute">Foot/minute</string>
    <string name="footPerSecond">Foots/second</string>
    <string name="kilometerPerHour">Kilometer/hour</string>
    <string name="milePerHour">Mile/hour</string>
    <string name="nauticMilePerHour">Nautical mile/hour</string>
    <string name="milePerMinute">Mile/minute</string>
    <string name="milePerSecond">Mile/second</string>
    <string name="lightSpeedDistance">Speed-light</string>
    <string name="speedSound">Speed-sound</string>
    <string name="knot">Knot</string>
    <string name="squareMeter">square meter</string>
    <string name="acre">Acre</string>
    <string name="barn">Barn</string>
    <string name="hectare">Hectare</string>
    <string name="rood">Rood</string>
    <string name="squareCentimeter">Square centimeter</string>
    <string name="squareKilometer">Square kilometer</string>
    <string name="squareFoot">Square foot</string>
    <string name="squareInch">square inch</string>
    <string name="squareMile">Square mile</string>
    <string name="squareYard">Square yard</string>
    <string name="pascal">Pascal</string>
    <string name="standardAtmosphere">Standard atmosphere</string>
    <string name="technicalAtmosphere">Technical atmosphere</string>
    <string name="bar">Bar</string>
    <string name="barye">barye</string>
    <string name="centimeterOfMercury">Centimeter of mercury</string>
    <string name="centimeterOfWater">Centimeter of water</string>
    <string name="decibar">Decibar</string>
    <string name="mercuryFoot">Mercury foot</string>
    <string name="waterFoot">Water foot</string>
    <string name="mercuryInch">Mercury inch</string>
    <string name="waterInch">Water inch</string>
    <string name="kilogramsMm2">Kilograms/mm2</string>
    <string name="kilogramsSquareInch">Kilograms/square inch</string>
    <string name="millibar">millibar</string>
    <string name="mercuryMillimeter">Mercury millimeter</string>
    <string name="waterMillimeter">Water millimeter</string>
    <string name="hectoPascal">Hectopascal</string>
    <string name="kiloPascal">Kilopascal</string>
    <string name="poundSquareFoot">Pound/square foot</string>
    <string name="poundSquareInch">Pound/square inch</string>
    <string name="poundsSquareFoot">Pounds/square foot</string>
    <string name="shortTonSquareFoot">Short ton/square foot</string>
    <string name="joule">Joule</string>
    <string name="btuIT">BTU(IT)</string>
    <string name="btuTH">BTU(th)</string>
    <string name="btuMean">BTU(mean)</string>
    <string name="btu39">BTU(39°F)</string>
    <string name="btu59">BTU(59°F)</string>
    <string name="btu60">BTU(60°F)</string>
    <string name="calorieThermo">Calorie(therm)</string>
    <string name="calorieMean">Calorie(mean)</string>
    <string name="calorie15">Calorie(15°C)</string>
    <string name="calorie20">Calorie(20°C)</string>
    <string name="electronVolt">ElectronVolt</string>
    <string name="erg">Erg</string>
    <string name="poundsFoot">Foot-Pounds</string>
    <string name="footPoundForce">Force/foot-pound</string>
    <string name="horsePowerHour">Horse power/hour</string>
    <string name="forceInchPound">Force/Inch pound</string>
    <string name="kiloCalorieIT">Kilocalorie(IT)</string>
    <string name="kiloCalorieMean">kilocalorie(mean)</string>
    <string name="kilowattHour">Kilowatt/hour</string>
    <string name="quadIT">Quad(IT)</string>
    <string name="thermU_S">Therm(U.S)</string>
    <string name="coalTon">Coal ton</string>
    <string name="oilTon">Oil ton</string>
    <string name="tntTon">TNT ton</string>
    <string name="wattHour">Watt/hour</string>
    <string name="wattSecond">Watt/second</string>
    <string name="cubicMeter">Cubic meter</string>
    <string name="cubicCentimeter">Cubic centimeter</string>
    <string name="cubicMillimeter">Cubic millimeter</string>
    <string name="acreFoot">Acre/foot</string>
    <string name="petroleumBarrel">Petroleum/barrel</string>
    <string name="cup">Cup</string>
    <string name="fireWoodCord">Cord(firewood)</string>
    <string name="cubicFoot">Cubic foot</string>
    <string name="cubicInch">Cubic inch</string>
    <string name="fluidOunce">Ounce(fluid)</string>
    <string name="ounceImperialMeasure">Ounce(Imperial-fluid)</string>
    <string name="gallonUK">Gallon(UK)</string>
    <string name="gallonUS">Gallon(US)</string>
    <string name="cubicInch2">Cubic inch</string>
    <string name="liter">Liter</string>
    <string name="tonVolume">Ton volume</string>
    <string name="cubicYard">Cubic yard</string>
    <string name="pintUSDry">Pint(US)dry</string>
    <string name="pintUSFluid">Pint(US)fluid</string>
    <string name="quarterUSFluid">Quarter(US)fluid</string>
    <string name="quarterImperialMeasure">Quarter(Imperial)</string>
    <string name="setValuePlease">Enter a value </string>
    <string name="lengthUnits">Length</string>
    <string name="temperatureUnits">Temperature</string>
    <string name="timeUnits">Time</string>
    <string name="massUnits">Mass</string>
    <string name="electricityUnits">Electricity</string>
    <string name="speedUnits">Speed</string>
    <string name="areaUnits">Area</string>
    <string name="pressureUnits">Pressure</string>
    <string name="energyUnits">Energy</string>
    <string name="volumeUnits">Volume</string>
    <string name="deleteAll">Delete all</string>
    <string name="deleteAllMsg">Want to delete all history?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="miscellany">Miscellany</string>
    <string name="aboutThis">About this</string>
    <string name="aboutThisMsg">About this simple unit converter</string>
    <string name="rateUs">Qualify</string>
    <string name="rateUsMsg">Rate the application</string>
    <string name="nightThemeMsg">Enable theme dark</string>
    <string name="theme">Theme</string>
    <string name="aboutThisBody">Simple Unit Converter, application for converting the most used units of measure. \n Developed by Barry Zea H.  Version 1.0.0</string>
    <string name="Accept">Accept</string>
    <string name="equalSymbol">=</string>

</resources>