<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/theme">
        <SwitchPreferenceCompat
            app:key="darkTheme"
            app:icon="@drawable/ic_night"
            app:title="@string/darkTheme"
            app:summary="@string/nightThemeMsg"
            app:defaultValue="false"
            app:widgetLayout="@layout/material_switch_item"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/miscellany">

        <Preference
            app:key="rateUs"
            app:icon="@drawable/ic_rate"
            app:title="@string/rateUs"
            app:summary="@string/rateUsMsg"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:defaultValue=""
            app:key="info"
            app:icon="@drawable/ic_info"
            app:title="@string/aboutThis"
            app:summary="@string/aboutThisMsg"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>